fix super weird chrome bug with overflow:scroll

--- a/frontend/public/css/m.css
+++ b/frontend/public/css/m.css
@@ -91,7 +91,7 @@ background-color: #d0d8e2;
 
 .filter-area {
   height: 200px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-top: 5px;
   transition: all 0.5s ease;
   border: 1px solid #D9E0E8;
